# deployment

./: .gitignore  LICENSE  README.md
evm-verify/: .env  .env.example  Cargo.toml  README-chain-analyzer.md  README.md  comprehensive_report.html  comprehensive_report.json  comprehensive_report.md  report.json  simple_report.html  simple_storage_report.html  simple_storage_report.json  simple_storage_report.md  simple_storage_security_report.html  simple_storage_security_report.json  simple_storage_security_report.md
evm-verify/common/: Cargo.toml
evm-verify/common/src/: lib.rs  types.rs  utils.rs
evm-verify/contracts/: Cargo.toml
evm-verify/contracts/sources/: TestContract.sol
evm-verify/contracts/src/: lib.rs
evm-verify/docs/: precision_circuit.md
evm-verify/examples/: analyze_comprehensive.rs  analyze_simple.rs  analyze_uniswap.rs  analyze_vulnerable_contract.rs  detect_precision_vulnerabilities.rs  generate_report.rs  pcc_example.rs  precision_vulnerable.sol
evm-verify/pcc/: Cargo.toml
evm-verify/pcc/src/: lib.rs  tests.rs
evm-verify/pcc/src/analyzer/: bytecode.rs  memory.rs  mod.rs  pipeline.rs
evm-verify/pcc/src/circuits/: bytecode.rs  memory.rs  mod.rs
evm-verify/pcc/src/prover/: mod.rs
evm-verify/pcd/: Cargo.toml
evm-verify/pcd/src/: lib.rs  prover.rs
evm-verify/pcd/src/circuits/: data.rs  mod.rs  tests.rs
evm-verify/pcd/src/prover/: tests.rs
evm-verify/pcd/src/verifier/: mod.rs  tests.rs
evm-verify/src/: lib.rs  utils.rs
evm-verify/src/api/: config.rs  mod.rs  report.rs  types.rs
evm-verify/src/bytecode/: access_control.rs  analyzer.rs  analyzer_access_control.rs  analyzer_arithmetic.rs  analyzer_bitmask.rs  analyzer_blocknumber.rs  analyzer_cross_contract_reentrancy.rs  analyzer_dos.rs  analyzer_events.rs  analyzer_externalcalls.rs  analyzer_flashloan.rs  analyzer_front_running.rs  analyzer_gas_griefing.rs  analyzer_gas_limit.rs  analyzer_governance.rs  analyzer_mev.rs  analyzer_oracle.rs  analyzer_overflow.rs  analyzer_precision.rs  analyzer_proxy.rs  analyzer_randomness.rs  analyzer_reentrancy.rs  analyzer_self_destruct.rs  analyzer_signature_replay.rs  analyzer_timestamp.rs  analyzer_txorigin.rs  analyzer_unchecked_calls.rs  analyzer_underflow.rs  analyzer_upgradability.rs  memory.rs  mod.rs  opcodes.rs  security.rs  tests.rs  types.rs
evm-verify/src/bytecode/tests/: access_control.rs  arithmetic.rs  bitmask.rs  bitwise.rs  block_number.rs  compound.rs  delegate.rs  flashloan.rs  live_contracts.rs  mainnet_contracts.rs  memory_patterns.rs  mod.rs  operation_ordering.rs  overflow.rs  real_world_tests.rs  reentrancy.rs  security_checks.rs  self_destruct.rs  solidity_checks.rs  state_transitions.rs  test_events.rs  test_gas_griefing.rs  test_new_analyzers.rs  test_precision.rs  test_upgradability.rs  underflow.rs  uninitialized_storage.rs
evm-verify/src/circuits/: access.rs  constructor.rs  cross_contract_reentrancy.rs  evm_state.rs  flash_loan.rs  front_running.rs  gas_griefing.rs  gas_limit.rs  governance.rs  integer_overflow.rs  memory.rs  mev.rs  mod.rs  oracle.rs  precision.rs  proxy.rs  reentrancy.rs  self_destruct.rs  signature_replay.rs  state.rs  storage.rs  timestamp_dependency.rs  unchecked_calls.rs  upgrade.rs
evm-verify/src/common/: mod.rs
evm-verify/src/ethereum/: chain.rs  etherscan.rs  mod.rs  proof.rs  trie.rs
evm-verify/src/ethereum/tests/: proof_tests.rs  trie_tests.rs
evm-verify/src/pcc/: mod.rs
evm-verify/src/prover/: mod.rs  tests.rs  types.rs
evm-verify/src/report/: mod.rs
evm-verify/src/tests/: memory_safety.rs  mod.rs
evm-verify/tests/: circuit_cross_contract_reentrancy.rs  circuit_flash_loan.rs  circuit_front_running.rs  circuit_gas_griefing.rs  circuit_gas_limit.rs  circuit_governance.rs  circuit_integer_overflow.rs  circuit_mev.rs  circuit_oracle.rs  circuit_precision.rs  circuit_proxy.rs  circuit_reentrancy.rs  circuit_self_destruct.rs  circuit_signature_replay.rs  circuit_timestamp_dependency.rs  circuit_unchecked_calls.rs  front_running_vulnerabilities.rs  integration_precision.rs  mev_vulnerabilities.rs
verify/: Cargo.toml
verify/common/: Cargo.toml
verify/common/src/: lib.rs
verify/example/: Cargo.toml
verify/example/src/: lib.rs
verify/pcc/: Cargo.toml
verify/pcc/src/: lib.rs  tests.rs
verify/pcc/src/analyzer/: memory.rs  mod.rs  pipeline.rs  resources.rs  tests.rs  types.rs  wasm.rs
verify/pcc/src/circuits/: memory.rs
verify/pcc/src/prover/: mod.rs
verify/pcd/: Cargo.toml
verify/pcd/src/: lib.rs  prover.rs
verify/pcd/src/circuits/: data.rs  mod.rs
verify/src/: lib.rs  main.rs
verify/src/circuits/: control_flow.rs  memory_pcd.rs  memory_safety.rs  mod.rs  resource_bounds.rs  type_safety.rs  utils.rs  verification.rs
verify/src/parser/: cfg.rs  mod.rs  types.rs  wasm_analyzer.rs
verify/src/proofs/: mod.rs
verify/src/prover/: mod.rs
verify/src/zk/: address.rs  mod.rs  sha256.rs
verify/test-wasm/: Cargo.toml
verify/test-wasm/src/: lib.rs
