[package]
name = "evm-verify"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "common",
    "contracts",
]

[dependencies]
# Internal dependencies
common = { path = "./common" }

# Ethereum
ethers = { version = "2.0", features = ["ws", "rustls"] }

# Cryptographic proof systems
ark-ff = "0.4"
ark-ec = "0.4"
ark-bn254 = "0.4"
ark-std = "0.4"
ark-r1cs-std = "0.4"
ark-relations = "0.4"
ark-groth16 = "0.4"
ark-snark = "0.4.0"

# Error handling and utilities
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Randomness
rand = "0.8"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
