[package]
name = "evm-verify"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "common",
    "contracts",
    "pcd",
]

[dependencies]
# Internal dependencies
evm-verify-common = { path = "./common" }
pcd = { path = "./pcd" }
pcc = { path = "../verify/pcc" }

# Ethereum
ethers = { version = "2.0", features = ["abigen", "ws", "rustls"] }
ethers-core = "2.0"
ethers-providers = "2.0"
ethers-solc = "2.0"
ethereum-types = "0.14"
rlp = "0.5"
tiny-keccak = { version = "2.0", features = ["keccak"] }
hex = "0.4"
hex-literal = "0.4"

# HTTP client
reqwest = { version = "0.11", features = ["blocking", "json"] }

# Async runtime
tokio = { version = "1.29", features = ["full"] }

# Cryptographic proof systems
ark-ff = "0.4"
ark-ec = "0.4"
ark-bn254 = "0.4"
ark-std = "0.4"
ark-r1cs-std = "0.4"
ark-relations = "0.4"
ark-groth16 = "0.4"
ark-snark = "0.4.0"
ark-serialize = "0.4"

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Randomness
rand = "0.8"

# CLI
clap = { version = "4.3", features = ["derive"] }

# Environment variables
dotenv = "0.15"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
hex-literal = "0.4"
proptest = "1.2"
