[package]
name = "evm-verify"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "common",
    "contracts",
    "pcd",
]

[dependencies]
# Internal dependencies
evm-verify-common = { path = "./common" }
pcd = { path = "./pcd" }
pcc = { path = "../verify/pcc" }

# Ethereum
ethers = { version = "2.0", features = ["ws"] }
ethereum-types = "0.14"
rlp = "0.5"
tiny-keccak = { version = "2.0", features = ["keccak"] }
hex = "0.4"
hex-literal = "0.4"

# Cryptographic proof systems
ark-ff = "0.4"
ark-ec = "0.4"
ark-bn254 = "0.4"
ark-bls12-381 = "0.4"
ark-std = "0.4"
ark-r1cs-std = "0.4"
ark-relations = "0.4"
ark-groth16 = "0.4"
ark-snark = "0.4.0"

# Error handling and utilities
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Randomness
rand = "0.8"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.10"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Temporary files for testing
tempfile = "3.8"

[dev-dependencies]
hex-literal = "0.4"
