[package]
name = "verify"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "common",
    "pcc",
    "pcd",
    "example",
    "test-wasm",
]

[dependencies]
# WASM parsing and analysis
wasmparser = "0.110.0"
walrus = "0.19.0"

# Cryptographic proof systems
ark-ff = "0.4.0"
ark-ec = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-std = "0.4.0"
ark-serialize = "0.4.0"
ark-relations = "0.4.0"
ark-r1cs-std = "0.4.0"
ark-groth16 = "0.4.0"
ark-snark = "0.4.0"
sha2 = "0.10.0"

# Error handling and utilities
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Workspace dependencies
common = { path = "./common" }
pcc = { path = "./pcc" }
pcd = { path = "./pcd" }
clap = { version = "4.5", features = ["derive"] }
num-traits = "0.2.19"
hex = "0.4.3"

[dev-dependencies]
wat = "1.0"  # For parsing WAT in tests
