[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
# Ethereum types
ethers = { version = "2.0", features = ["ws", "rustls"] }
primitive-types = "0.12"

# Cryptographic primitives
ark-ff = "0.4.0"
ark-ec = "0.4.0"
ark-bls12-381 = "0.4.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"
